--- a/src/404.md
+++ b/src/404.md
@@ -1,8 +1,6 @@
 ---
-layout: layouts/home.njk
+layout: layouts/page.njk
+title: Content not found.
 permalink: 404.html
 eleventyExcludeFromCollections: true
 ---
-# Content not found.
-
-Go <a href="{{ '/' | url }}">home</a>.
